--- a/lists/templates/lists/home.html
+++ b/lists/templates/lists/home.html
@@ -3,11 +3,16 @@
     <head></head>
     
     <body>
-            <h1>Your To-Do list</h1>    
-            <input type="text" id="id_new_item"/ placeholder="Enter a to-do item">
+            <h1>Your To-Do list</h1>
+            <form method="POST">
+                <input name="item_text" id="id_new_item" placeholder="Enter a to-do item" />
+                {% csrf_token %}
+            </form>
+        
             <table id="id_list_table">
+                <tr><td>1: {{ new_item_text }}</td></tr>
             </table>
-    </body>
+        </body>
     
 
 </html>
